--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     margin:0;
-    background: linear-gradient(to bottom, #666699 -20%, #660033 130%);
+    background: grey;
     color:white;
 }
 #container{
