--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin:0;
     background: grey;
     color:white;
+    font-size: 16px;
 }
 #container{
     display: flex;
@@ -9,6 +10,7 @@
 }
 .menu{
     text-decoration: overline;
+    width: 5rem;
 }
 .content{
     text-align: center;
