--- a/style.css
+++ b/style.css
@@ -7,15 +7,30 @@
 #container{
     display: flex;
     flex-direction: row;
+    width: 100%;
 }
 .menu{
+    flex: 1 0;
     text-decoration: overline;
-    width: 5rem;
+    width: 7rem;
+    /* float: left; */
+    height: 100%;
 }
 .content{
-    text-align: center;
-    align-content: center;
+    /* padding:5px; */
+    flex: 1 1 auto;
+    /* float: left; */
+    height: 100%;
 }
 .right{
+    flex: 0 1;
     text-decoration: dotted;
+    width: 7rem;
+    /* float: right; */
+    height: 100%;
+}
+.footer{
+    height: 5rem;
+    background-color: darkgrey !important;
+    min-width: auto;
 }
