--- a/style.css
+++ b/style.css
@@ -1,32 +1,52 @@
 *{
     margin:0;
+}
+html{
+    width: 100%;
     background: grey;
     color:white;
     font-size: 16px;
 }
+header{
+    align-items: center;
+    text-align: center;
+    height: 5rem;
+}
+
+
+
 #container{
     display: flex;
     flex-direction: row;
     width: 100%;
+    position: relative;
 }
 .menu{
-    flex: 1 0;
+    flex: 1 0 5rem;
     text-decoration: overline;
-    width: 7rem;
-    /* float: left; */
     height: 100%;
 }
 .content{
-    /* padding:5px; */
     flex: 1 1 auto;
-    /* float: left; */
-    height: 100%;
+    height: 800px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
+
+.content::-webkit-scrollbar{
+    width: 0.25rem;
+}
+.content::-webkit-scrollbar-track{
+    background: grey;
+}
+.content::-webkit-scrollbar-thumb{
+    background: darkgrey;
+}
+
+
 .right{
-    flex: 0 1;
+    flex: 0 1 5rem;
     text-decoration: dotted;
-    width: 7rem;
-    /* float: right; */
     height: 100%;
 }
 .footer{
